k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: evolve-todo
  labels:
    name: evolve-todo
    app: evolve-todo
